# cyberdeck

./: .CLAUDE.md  .GEMINI.md  .gitignore  AGENTS.md  ASSURANCE.md  CI_CD_HARDENING_REPORT.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  release.yml  security.yml
ci/orchestrator/: orchestrator.cabal
ci/orchestrator/app/: Main.hs
ci/orchestrator/app/Orchestrator/: Package.hs  Pipeline.hs  Runner.hs  Version.hs  Workflow.hs
packaging/: PKGBUILD  build-packages.sh  cyberdeck.spec
packaging/debian/DEBIAN/: control
scripts/: install-local.sh  regression.sh
src/: health.rs  keys.rs  lib.rs  main.rs  models.rs  ssh_config.rs  ssh_ops.rs  storage.rs  tui.rs
tests/: regression.rs
