[package]
name = "cyberdeck"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

[dev-dependencies]
tempfile = "3.23"
