[package]
name = "cyberdeck"
version = "0.1.7"
edition = "2024"
rust-version = "1.85"
description = "Cyberpunk SSH key management, exchange, and remote command TUI"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/jalsarraf0/cyberdeck"
homepage = "https://github.com/jalsarraf0/cyberdeck"
keywords = ["ssh", "tui", "terminal", "devops"]
categories = ["command-line-interface", "network-programming"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

[dev-dependencies]
tempfile = "3.23"
