cabal-version: 2.4
name:          orchestrator
version:       0.1.0
synopsis:      CI/CD orchestrator for cyberdeck
license:       Apache-2.0
build-type:    Simple

executable orchestrator
  main-is:          Main.hs
  hs-source-dirs:   app
  other-modules:    Orchestrator.Pipeline
                  , Orchestrator.Runner
                  , Orchestrator.Version
                  , Orchestrator.Workflow
                  , Orchestrator.Package
  build-depends:    base >= 4.17 && < 5
                  , containers >= 0.6
                  , directory >= 1.3
                  , filepath >= 1.4
                  , process >= 1.6
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -O2
